// Vitest Snapshot v1

exports[`components > N8nCard > should render correctly 1`] = `
"<div class=\\"card _card_\\">
  <!---->
  <div class=\\"_content_\\">
    <!---->
    <div class=\\"_body_\\">This is a card.</div>
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`components > N8nCard > should render correctly with header and footer 1`] = `
"<div class=\\"card _card_\\">
  <!---->
  <div class=\\"_content_\\">
    <div class=\\"_header_\\">Header</div>
    <div class=\\"_body_\\">This is a card.</div>
    <div class=\\"_footer_\\">Footer</div>
  </div>
  <!---->
</div>"
`;
